constant for Create User

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">CRUDLite</string>
-    <string name="database_name">database.db</string>
+    <string name="create_user">Create User</string>
 </resources>
