--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">CRUDLite</string>
     <string name="create_user">Create User</string>
+    <string name="hint_firstname">First Name</string>
+    <string name="hint_lastname">Last Name</string>
+    <string name="hint_email">Email</string>
+    <string name="submit">Submit</string>
+    <string name="cancel">Cancel</string>
 </resources>
